--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,5 @@ dist/
 build/
 coverage/
 
-# # Vendored binaries (downloaded at runtime)
-# bin/
-# !bin/yt-dlp
-
+# Vendored binaries (downloaded at runtime)
+!bin/yt-dlp
