--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "pino": "^9.3.2",
     "sanitize-filename": "^1.6.3",
