--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
-  "name": "yt2mp3",
-  "version": "0.1.0",
-  "private": true,
-  "description": "Simple web app to convert YouTube links to high-quality MP3",
-  "main": "server.js",
+  "name": "yt2-mp3",
+  "version": "1.0.0",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "postinstall": "node scripts/fetch-ytdlp.js"
+    "dev": "node server.js"
   },
-  "keywords": [
-    "youtube",
-    "mp3",
-    "converter",
-    "yt-dlp",
-    "ffmpeg"
-  ],
-  "author": "",
-  "license": "UNLICENSED",
   "dependencies": {
+    "express": "^4.18.2",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "pino": "^9.3.2",
-    "sanitize-filename": "^1.6.3",
+    "yt-dlp-wrap": "^2.6.1",
     "ytdl-core": "^4.11.5",
-    "yt-dlp-wrap": "^2.3.12"
+    "cors": "^2.8.5"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
