--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "ytdl-core": "^4.11.5",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "sanitize-filename": "^1.6.3",
+    "ytdl-core": "^4.11.5"
   },
   "engines": {
     "node": ">=18.0.0"
