--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "sanitize-filename": "^1.6.3",
-    "ytdl-core": "^4.11.5"
+    "play-dl": "^1.9.7",
+    "sanitize-filename": "^1.6.3"
   },
   "engines": {
     "node": ">=18.0.0"
